# word2vec-rs

./: .gitignore  Cargo.toml  README.md  california.txt  oakland.txt  plot.py  san_francisco.txt  san_francisco_bay_area.txt  sf_ba_oak.txt  wiki-extract.py
corpora/: san_francisco.txt
src/: args.rs  lib.rs  main.rs  metadata.rs  model.rs  nn.rs  query.rs  sample.rs  state.rs  train.rs
