[package]
name = "word2vec-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
opt-level = 3

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
ndarray = {version = "0.15.6", features = ["serde"]}
ndarray-rand = "0.14.0"
ordered-float = "2.7"
rand = "0.8.5"
regex = "1.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
